Part1/split-getting-started/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: split-timestamp-string-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: split-timestamp-string-service
              servicePort: 2345
